--- a/GSG_Induction_Managing_your_career.html
+++ b/GSG_Induction_Managing_your_career.html
@@ -4229,9 +4229,92 @@ You can find out what peer review workshops are coming up in the near future by 
 <p class="govuk-body">
 Joining the RSS will help you expand your network in a global community of like-minded individuals and stay informed of developments in the world of statistics and data science.
 </p>
-<p class="govuk-body">
-Those who are based at UKSA/ONS can receive a RSS corporate membership scheme.
-</p>
+<table class="table table-condensed">
+<thead>
+<tr class="header">
+<th>Department</th>
+<th>Contact</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Department for Business, Energy &amp; Industrial Strategy</td>
+<td>Jo Marvin</td>
+</tr>
+<tr class="even">
+<td>Department for Digital, Culture, Media &amp; Sport</td>
+<td>Jackie Orme</td>
+</tr>
+<tr class="odd">
+<td>Department for Environment, Food &amp; Rural Affairs</td>
+<td>Jane Simcock</td>
+</tr>
+<tr class="even">
+<td>Department for Education</td>
+<td>Sophie Danielis</td>
+</tr>
+<tr class="odd">
+<td>Department for International Trade</td>
+<td>James Liley</td>
+</tr>
+<tr class="even">
+<td>Department for Transport</td>
+<td>Nikesh Lad</td>
+</tr>
+<tr class="odd">
+<td>Department for International Development</td>
+<td>Paula McLeod and Elaine Herd</td>
+</tr>
+<tr class="even">
+<td>Department for Work &amp; Pensions</td>
+<td>Katie Dodd</td>
+</tr>
+<tr class="odd">
+<td>GSS Fast Streamers</td>
+<td>Ian Fogg</td>
+</tr>
+<tr class="even">
+<td>HM Revenue &amp; Customs (including Valuation Office Agency</td>
+<td>Neil Wilson</td>
+</tr>
+<tr class="odd">
+<td>Home Office</td>
+<td>Joseph Pereira</td>
+</tr>
+<tr class="even">
+<td>Ministry of Housing, Communities &amp; Local Government</td>
+<td>James Denman</td>
+</tr>
+<tr class="odd">
+<td>Ministry of Defence</td>
+<td>Emma Broderick</td>
+</tr>
+<tr class="even">
+<td>Ministry of Justice</td>
+<td>Aidan Mews</td>
+</tr>
+<tr class="odd">
+<td>NHS Digital</td>
+<td>Wendy Leybourne</td>
+</tr>
+<tr class="even">
+<td>Office of Rail and Road</td>
+<td>Lyndsey Melbourne</td>
+</tr>
+<tr class="odd">
+<td>Office for National Statistics</td>
+<td>Janet Hillier</td>
+</tr>
+<tr class="even">
+<td>Scottish Government</td>
+<td>Celia MacIntyre</td>
+</tr>
+<tr class="odd">
+<td>Welsh Government</td>
+<td>Karen Deehan</td>
+</tr>
+</tbody>
+</table>
 <h2 id="dont-forget-slack" class="govuk-heading-l">Don’t forget Slack!</h2>
 <p class="govuk-body">
 Slack is a website and an app that can be used for collaboration. It allows you to find and communicate with colleagues across the GSS who may be working on similar projects to you. It allows the right people and the right information to come together, helping everyone get work done.
